# DataStructures_Algorithms

./: .clang-format  .gitignore  CMakeLists.txt  README.md  conanfile.txt  main.cpp
List/DoubleLinkedList_Circuled/: main.cpp
List/DoubleLinkedList_Circuled/lib/: constructors.cpp  member_functions.cpp
List/DoubleLinkedList_Template/: main.cpp
List/DoubleLinkedList_Template/lib/: D_List.hpp
List/LL_s_u/: SLL_u.cpp  SLL_u.h  main.cpp
List/SinglyLinkedList_nonTemplate/: main.cpp
List/SinglyLinkedList_nonTemplate/lib/: SinglyLinkedList.h  constructors.cpp  member_functions.cpp  (+1 more)
Stack/: Stack.h  main.cpp
Stack/ArrayBased_Template/: ArrayBased_T.h  String.cpp  String.h  main.cpp
Stack/ListBased_Template/: ListBased_T.h  main.cpp
alg_/: CMakeLists.txt
alg_/alg_test/: CMakeLists.txt
alg_/algms/: CMakeLists.txt  FibTD.hpp  LISBottomUp.hpp  LIS_n^2.cpp  LIS_nlogn.cpp  LIS_nlogn.hpp  task.cpp  task.hpp
alg_/common_alg/: CBS.cpp  CMakeLists.txt  merge_names.cpp  parse_digits.cpp  two_sum.cpp
alg_/dynamic/: CMakeLists.txt  backpack.cpp  calculator.cpp  levenstein_distance.cpp  points_sections.cpp  stairs.cpp
alg_/greedy/: CMakeLists.txt  cookies_I.cpp
alg_/sorting_alg/: CMakeLists.txt
alg_/tree_search/: CMakeLists.txt  bts_search.cpp
data_structures/: CMakeLists.txt
data_structures/ds_alg/: CMakeLists.txt
data_structures/heap/: CMakeLists.txt  heap_solution.cpp  huffman_coding.cpp
lib/googletest/: CMakeCache.txt  CTestTestfile.cmake  install_manifest.txt
nonTemplated/ArrayBased_nonTemplate/: ArrayBased.cpp  ArrayBased.h  main.cpp
sorting_alg/MergeSort/: inverse_count.hpp  main.cpp  solution.hpp  template_based.hpp
sorting_alg/basic_sort_alg/: main.cpp
(+47 files in other folders)
